@@ -4,3 +4,4 @@
 
 In your IDE `settings->apperance & behavior -> path variables` set `PATH_TO_FX` as an absolute path pointing
 to `javafx/lib` in this project.
+Run config `Run->Edit Configuartions -> modify options -> add VM options` input `--module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.graphics`
